clusters/bison/bison-services.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bison-httpbin-chaos-routing
  # namespace: istio-system
spec:
  hosts:
    - httpbin.default.bison.global
    - httpbin.default.global
    - httpbin.default.svc.cluster.local
  gateways:
    - bison-multicluster-ingressgateway.istio-system.svc.cluster.local
    - mesh
    - istio-system/bison-multicluster-ingressgateway
  http:
    - match:
        - uri:
            prefix: /chaos
      rewrite:
        uri: /status/418
      route:
        - destination:
            host: httpbin.default.svc.cluster.local
      fault:
        abort:
          percentage:
            value: 50
          httpStatus: 400
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-svc-httpbin
spec:
  hosts:
    - httpbin.org
  location: MESH_EXTERNAL
  ports:
    - number: 80
      name: example-http
      protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-svc-httpbin-chaos-routing
spec:
  hosts:
    - httpbin.org
  http:
    - match:
        - uri:
            prefix: /chaos
      rewrite:
        uri: /status/418
      route:
        - destination:
            host: httpbin.org
      fault:
        abort:
          percentage:
            value: 50
          httpStatus: 400
